PyYAML version eodag issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+tornado
 notebook
 jupyterhub
 jupyterlab
 jupyter_contrib_nbextensions
 eodag
+# Eodag issue currently on latest PyYAML 5.1
+PyYAML==3.13
