--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ notebook
 jupyterhub
 jupyterlab
 jupyter_contrib_nbextensions
+geojson
 eodag
 # Eodag issue currently on latest PyYAML 5.1
 PyYAML==3.13
