--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,2 @@
-git+https://bitbucket.org/geostorm/eodag.git@rest_refactoring_new#egg=eodag
+git+https://bitbucket.org/geostorm/eodag.git@rest_refactoring#egg=eodag
 .
