--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
-git+https://bitbucket.org/geostorm/eodag.git@rest_refactoring#egg=eodag
+# Commit before configuration file refactoring
+git+https://bitbucket.org/geostorm/eodag.git@1a65c173483c4ac46577bd5164f97bce8939d7e9#egg=eodag
+
 .
