--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,13 @@
 version: '2'
 services:
   rs-postgres:
-    image: ia3d:withproxy
+    image: ia3d:latest
     container_name: jupyterlab
     # restart: always
     # mem_limit: 400m
     volumes:
       - ./:/plugin
     ports:
-      - "8888:8888"
+      - "8000:8000"
       - "8787:8787"
-    environment:
-      - HTTP_PROXY="http://proxy2.si.c-s.fr:3128"
-      - HTTPS_PROXY="http://proxy2.si.c-s.fr:3128"
-      - http_proxy="http://proxy2.si.c-s.fr:3128"
-      - https_proxy="http://proxy2.si.c-s.fr:3128"
-      - no_proxy="localhost,127.0.0.1"
-    command: "jupyter lab --allow-root --watch --no-browser --ip=0.0.0.0"
+    # command: "jupyter lab --allow-root --watch --no-browser --ip=0.0.0.0"
