Modify dependencies (Font awesome, remove MUI)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,6 @@
     "types": [],
     "jsx": "react"
   },
-  "include": ["src/*"]
+  "include": ["src/*"],
+  "allowSyntheticDefaultImports": true
 }
