--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
     "watch": "tsc -w"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.19",
+    "@fortawesome/free-solid-svg-icons": "^5.9.0",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@jupyterlab/application": "^0.19.1",
     "@jupyterlab/apputils": "^0.19.1",
     "@jupyterlab/cells": "^0.19.1",
     "@jupyterlab/notebook": "^0.19.2",
-    "@material-ui/core": "^3.9.1",
-    "@material-ui/icons": "^3.0.2",
-    "@material-ui/lab": "^3.0.0-alpha.30",
     "@types/leaflet-draw": "^0.4.13",
     "@types/lodash": "4.14.120",
+    "@types/prop-types": "15.5.8",
     "@types/react-dom": "~16.0.7",
     "@types/react-leaflet": "^1.1.6",
+    "@types/react-tooltip": "^3.9.2",
     "@types/react-virtualized": "^9.18.12",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.4.0",
@@ -54,7 +56,9 @@
     "react-dom": "^16.4.2",
     "react-leaflet": "^2.2.0",
     "react-leaflet-draw": "^0.19.0",
-    "react-select": "^2.3.0",
+    "react-modal": "^3.8.1",
+    "react-select": "3.0.4",
+    "react-tooltip": "^3.10.0",
     "react-virtualized": "^9.21.0"
   },
   "devDependencies": {
@@ -63,7 +67,8 @@
   },
   "resolutions": {
     "**/@types/react": "~16.4.13",
-    "**/@types/react-dom": "~16.0.7"
+    "**/@types/react-dom": "~16.0.7",
+    "**/@types/prop-types": "~15.5.8"
   },
   "jupyterlab": {
     "extension": true,
