fix!: upgrade to JupyterLab 1.x
BREAKING CHANGE: add support for JupyterLab 1.x and drops support for
JupyterLab 0.x.

--- a/package.json
+++ b/package.json
@@ -32,25 +32,25 @@
     "watch": "tsc -w"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.19",
-    "@fortawesome/free-solid-svg-icons": "^5.9.0",
-    "@fortawesome/react-fontawesome": "^0.1.4",
-    "@jupyterlab/application": "^0.19.1",
-    "@jupyterlab/apputils": "^0.19.1",
-    "@jupyterlab/cells": "^0.19.1",
-    "@jupyterlab/notebook": "^0.19.2",
-    "@types/leaflet-draw": "^0.4.13",
-    "@types/lodash": "4.14.120",
-    "@types/prop-types": "15.5.8",
-    "@types/react-dom": "~16.0.7",
-    "@types/react-leaflet": "^1.1.6",
-    "@types/react-tooltip": "^3.9.2",
-    "@types/react-virtualized": "^9.18.12",
-    "isomorphic-fetch": "^2.2.1",
-    "leaflet": "^1.4.0",
-    "leaflet-draw": "^1.0.4",
-    "lodash": "^4.17.11",
-    "prop-types": "^15.5.2",
+    "@fortawesome/fontawesome-svg-core": "",
+    "@fortawesome/free-solid-svg-icons": "",
+    "@fortawesome/react-fontawesome": "",
+    "@jupyterlab/application": "",
+    "@jupyterlab/apputils": "",
+    "@jupyterlab/cells": "",
+    "@jupyterlab/notebook": "",
+    "@types/leaflet-draw": "",
+    "@types/lodash": "",
+    "@types/prop-types": "",
+    "@types/react-dom": "",
+    "@types/react-leaflet": "",
+    "@types/react-tooltip": "",
+    "@types/react-virtualized": "",
+    "isomorphic-fetch": "",
+    "leaflet": "",
+    "leaflet-draw": "",
+    "lodash": "",
+    "prop-types": "",
     "react": "^16.4.2",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.4.2",
