--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://odin.si.c-s.fr/plugins/git/ia3d-demo/eodag-labextension/issues"
   },
   "license": "BSD-3-Clause",
-  "author": "CS-SI",
+  "author": "CS Group",
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
     "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
