--- a/package.json
+++ b/package.json
@@ -51,23 +51,23 @@
     "leaflet-draw": "",
     "lodash": "",
     "prop-types": "",
-    "react": "^16.4.2",
-    "react-datepicker": "^2.0.0",
-    "react-dom": "^16.4.2",
-    "react-leaflet": "^2.2.0",
-    "react-leaflet-draw": "^0.19.0",
-    "react-modal": "^3.8.1",
-    "react-select": "3.0.4",
-    "react-tooltip": "^3.10.0",
-    "react-virtualized": "^9.21.0"
+    "react": "~16.8.4",
+    "react-datepicker": "~2.0.0",
+    "react-dom": "~16.8.4",
+    "react-leaflet": "~2.0.0",
+    "react-leaflet-draw": "~0.19.0",
+    "react-modal": "~3.8.1",
+    "react-select": "~3.0.4",
+    "react-tooltip": "~3.10.0",
+    "react-virtualized": "~9.21.0"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
     "typescript": "~3.1.1"
   },
   "resolutions": {
-    "**/@types/react": "~16.4.13",
-    "**/@types/react-dom": "~16.0.7",
+    "**/@types/react": "~16.8.4",
+    "**/@types/react-dom": "~16.8.4",
     "**/@types/prop-types": "~15.5.8"
   },
   "jupyterlab": {
