--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,20 @@
 {
   "compilerOptions": {
     "declaration": true,
-    "lib": ["es2015", "dom"],
+    "lib": ["ES6", "DOM"],
     "module": "commonjs",
     "moduleResolution": "node",
-    "noEmitOnError": true,
+    "noEmitOnError": false,
     "noUnusedLocals": true,
     "noImplicitAny": false,
+    "strictNullChecks": false,
+    "skipLibCheck": true,
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
-    "strictNullChecks": false,
-    "target": "es2015",
+    "target": "ES6",
     "types": [],
     "jsx": "react"
   },
-  "include": ["src/*"],
-  "allowSyntheticDefaultImports": true
+  "include": ["src/*"]
 }
