--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-datepicker": "~2.0.0",
     "react-dom": "~16.8.4",
     "react-leaflet": "~2.0.0",
-    "react-leaflet-draw": "~0.19.0",
+    "react-leaflet-draw": "0.19.0",
     "react-modal": "~3.8.1",
     "react-select": "~3.0.4",
     "react-tooltip": "~3.10.0",
