refact: fix several type annotation
This is the first step to prepare migration to Jupyterlab V3.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/react-dom": "~16.9.5",
     "@types/react-leaflet": "~2.5.0",
+    "@types/react-select": "^3.0.4",
     "@types/react-virtualized": "~9.21.7",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.6.0",
@@ -57,12 +58,16 @@
     "react-leaflet-draw": "0.19.0",
     "react-modal": "~3.8.1",
     "react-select": "~3.0.4",
-    "react-tooltip": "~3.10.0",
+    "react-tooltip": "~4.2.7",
     "react-virtualized": "~9.21.0"
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
     "typescript": "^3.7.3"
+    "@types/classnames": "^2.2.11",
+    "@types/isomorphic-fetch": "0.0.35",
+    "@types/react-datepicker": "^3.1.8",
+    "@types/react-modal": "^3.8.1",
   },
   "resolutions": {
     "**/@types/react": "~16.8.4",
