--- a/package.json
+++ b/package.json
@@ -63,11 +63,11 @@
   },
   "devDependencies": {
     "rimraf": "^2.6.1",
-    "typescript": "^3.7.3"
+    "typescript": "^3.7.3",
     "@types/classnames": "^2.2.11",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/react-datepicker": "^3.1.8",
-    "@types/react-modal": "^3.8.1",
+    "@types/react-modal": "^3.8.1"
   },
   "resolutions": {
     "**/@types/react": "~16.8.4",
