feat!: upgrade to jupyterlab v3
Most of changes where generated by the [migration
script](https://jupyterlab.readthedocs.io/en/stable/extension/extension_migration.html)
with some adaptations to satisfy pre-commit hooks.

BREAKING CHANGE: installation method is changed, see README.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,4 +12,4 @@ force_grid_wrap = 0
 use_parentheses = true
 ensure_newline_before_comments = true
 line_length = 120
-known_third_party = ["eodag", "notebook", "setuptools", "tornado"]
+known_third_party = ["eodag", "jupyter_packaging", "jupyter_server", "notebook", "setuptools", "tornado"]
