--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,112 @@
+*.bundle.*
+lib/
+node_modules/
+*.egg-info/
+.ipynb_checkpoints
+*.tsbuildinfo
+eodag-labextension/labextension
+
+# Created by https://www.gitignore.io/api/python
+# Edit at https://www.gitignore.io/?templates=python
+
+### Python ###
+# Byte-compiled / optimized / DLL files
+__pycache__/
 *.py[cod]
+*$py.class
 
 # C extensions
 *.so
 
-# Packages
-*.egg
-*.egg-info
-dist
-build
-eggs
-parts
-bin
-var
-sdist
-develop-eggs
+# Distribution / packaging
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
 .installed.cfg
-lib
-lib64
+*.egg
+MANIFEST
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
 
 # Installer logs
 pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
+htmlcov/
+.tox/
+.nox/
 .coverage
-.tox
+.coverage.*
+.cache
 nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
 
 # Translations
 *.mo
+*.pot
 
-# Eclipse
-.settings
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# pyenv
+.python-version
+
+# celery beat schedule file
+celerybeat-schedule
+
+# SageMath parsed files
+*.sage.py
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# Mr Developer
+.mr.developer.cfg
 .project
 .pydevproject
 
-# Static files compilation
-storm-server/static
+# mkdocs documentation
+/site
 
-# Docker specific
-/geo_links.yaml
-/layers.yaml
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
-site_media
-private
+# Pyre type checker
+.pyre/
 
-*.swp
+# End of https://www.gitignore.io/api/python
 
-.idea
-.vscode
-
-# ignore backup files from futurize
-*.py.bak
-
-# Built doc
-docs/_build
-
-# Coverage html report
-htmlcov
-
-locale
-
-# JupyterHub specifics
-jupyterhub.sqlite
-jupyterhub_cookie_secret
-jupyterhub-proxy.pid
-
-# Node
-*.bundle.*
-lib/
-node_modules/
-.ipynb_checkpoints
-.history
+# OSX files
+.DS_Store
