--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "url": "https://odin.si.c-s.fr/plugins/git/ia3d-demo/eodag-labextension/issues"
   },
   "license": "BSD-3-Clause",
-  "author": "CS Group",
+  "author": {
+    "name": "CS Group",
+    "email": "admin@geostorm.eu"
+  },
   "files": [
     "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
     "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
     "schema/*.json",
-    "node_modules/leaflet/dist/**/*.{css,png}"
+    "node_modules/leaflet/dist/**/*.{css,png}",
+    "style/index.js"
   ],
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
@@ -26,19 +30,31 @@
     "url": "https://odin.si.c-s.fr/plugins/git/ia3d-demo/eodag-labextension.git"
   },
   "scripts": {
-    "build": "tsc",
-    "clean": "rimraf lib",
-    "prepare": "npm run clean && npm run build",
-    "watch": "tsc -w"
+    "build": "jlpm run build:lib && jlpm run build:labextension:dev",
+    "build:labextension": "jupyter labextension build .",
+    "build:labextension:dev": "jupyter labextension build --development True .",
+    "build:lib": "tsc",
+    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
+    "clean": "jlpm run clean:lib",
+    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
+    "clean:labextension": "rimraf eodag-labextension/labextension",
+    "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
+    "eslint": "eslint . --ext .ts,.tsx --fix",
+    "eslint:check": "eslint . --ext .ts,.tsx",
+    "install:extension": "jupyter labextension develop --overwrite .",
+    "prepare": "jlpm run clean && jlpm run build:prod",
+    "watch": "run-p watch:src watch:labextension",
+    "watch:labextension": "jupyter labextension watch .",
+    "watch:src": "tsc -w"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@jupyterlab/application": "^2.2.1",
-    "@jupyterlab/apputils": "^2.2.1",
-    "@jupyterlab/cells": "^2.2.1",
-    "@jupyterlab/notebook": "^2.2.2",
+    "@jupyterlab/application": "^3.0.7",
+    "@jupyterlab/apputils": "^3.0.5",
+    "@jupyterlab/cells": "^3.0.7",
+    "@jupyterlab/notebook": "^3.0.7",
     "@types/leaflet-draw": "^1.0.1",
     "@types/lodash": "^4.14.149",
     "@types/prop-types": "^15.7.3",
@@ -51,9 +67,9 @@
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
-    "react": "~16.9.0",
+    "react": "^17.0.1",
     "react-datepicker": "~2.0.0",
-    "react-dom": "~16.9.0",
+    "react-dom": "^17.0.1",
     "react-leaflet": "~2.0.0",
     "react-leaflet-draw": "0.19.0",
     "react-modal": "~3.8.1",
@@ -62,12 +78,21 @@
     "react-virtualized": "~9.21.0"
   },
   "devDependencies": {
-    "rimraf": "^2.6.1",
-    "typescript": "^3.7.3",
+    "@jupyterlab/builder": "^3.0.0",
     "@types/classnames": "^2.2.11",
     "@types/isomorphic-fetch": "0.0.35",
     "@types/react-datepicker": "^3.1.8",
-    "@types/react-modal": "^3.8.1"
+    "@types/react-modal": "^3.8.1",
+    "@typescript-eslint/eslint-plugin": "^4.8.1",
+    "@typescript-eslint/parser": "^4.8.1",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "mkdirp": "^1.0.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.1.1",
+    "rimraf": "^3.0.2",
+    "typescript": "~4.1.3"
   },
   "resolutions": {
     "**/@types/react": "~16.8.4",
@@ -76,6 +101,8 @@
   },
   "jupyterlab": {
     "extension": true,
-    "schemaDir": "schema"
-  }
+    "schemaDir": "schema",
+    "outputDir": "eodag-labextension/labextension"
+  },
+  "styleModule": "style/index.js"
 }
