--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,24 @@
 {
   "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "composite": true,
     "declaration": true,
     "esModuleInterop": true,
-    "lib": ["es2017", "DOM"],
-    "module": "commonjs",
+    "incremental": true,
+    "jsx": "react",
+    "module": "esnext",
     "moduleResolution": "node",
-    "noEmitOnError": false,
+    "noEmitOnError": true,
+    "noImplicitAny": true,
     "noUnusedLocals": true,
-    "noImplicitAny": false,
-    "strictNullChecks": false,
-    "skipLibCheck": true,
+    "preserveWatchOutput": true,
+    "resolveJsonModule": true,
     "outDir": "lib",
     "rootDir": "src",
     "strict": true,
+    "strictNullChecks": false,
     "target": "es2017",
-    "types": [],
-    "jsx": "react"
+    "types": []
   },
   "include": ["src/*"]
 }
