--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "jupyterlab",
     "jupyterlab-extension"
   ],
-  "homepage": "https://odin.si.c-s.fr/plugins/git/ia3d-demo/eodag-labextension",
+  "homepage": "https://gitlab.cloud-espace.si.c-s.fr/vre/ai4geo/lot4/eodag-labextension",
   "bugs": {
-    "url": "https://odin.si.c-s.fr/plugins/git/ia3d-demo/eodag-labextension/issues"
+    "url": "https://gitlab.cloud-espace.si.c-s.fr/vre/ai4geo/lot4/eodag-labextension/-/issues"
   },
   "license": "BSD-3-Clause",
   "author": {
@@ -27,7 +27,7 @@
   "types": "lib/index.d.ts",
   "repository": {
     "type": "git",
-    "url": "https://odin.si.c-s.fr/plugins/git/ia3d-demo/eodag-labextension.git"
+    "url": "https://gitlab.cloud-espace.si.c-s.fr/vre/ai4geo/lot4/eodag-labextension.git"
   },
   "scripts": {
     "build": "jlpm run build:lib && jlpm run build:labextension:dev",
