--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "@types/prop-types": "^15.7.3",
     "@types/react-dom": "~16.9.5",
     "@types/react-leaflet": "~2.5.0",
-    "@types/react-select": "^3.0.4",
+    "@types/react-select": "^4.0.15",
     "@types/react-virtualized": "~9.21.7",
     "isomorphic-fetch": "^2.2.1",
     "leaflet": "^1.6.0",
@@ -73,7 +73,7 @@
     "react-leaflet": "~2.0.0",
     "react-leaflet-draw": "0.19.0",
     "react-modal": "~3.8.1",
-    "react-select": "~3.0.4",
+    "react-select": "^4.3.0",
     "react-tooltip": "~4.2.7",
     "react-virtualized": "~9.21.0"
   },
