--- a/package.json
+++ b/package.json
@@ -69,8 +69,9 @@
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
-    "react-datepicker": "~2.0.0",
+    "react-datepicker": "^3.8.0",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^7.6.4",
     "react-leaflet": "~2.0.0",
     "react-leaflet-draw": "0.19.0",
     "react-modal": "~3.8.1",
@@ -93,7 +94,7 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "typescript": "~4.1.3"
+    "typescript": "4.2.4"
   },
   "resolutions": {
     "**/@types/react": "~16.8.4",
