feat: improve date management
- Datepickers are linked: endDate cannot be before startDate and startDate cannot be after endDate.

- date have defaults: endDate is today and startDate is yesterday.
- datePickers are clearable.

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/leaflet": "^1.6.0",
     "@types/leaflet-draw": "^1.0.1",
     "@types/lodash": "^4.14.149",
+    "@types/luxon": "^1.26.5",
     "@types/prop-types": "^15.7.3",
     "@types/react-dom": "~16.9.5",
     "@types/react-leaflet": "~2.5.0",
@@ -67,6 +68,7 @@
     "leaflet": "^1.6.0",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.15",
+    "luxon": "^1.27.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-datepicker": "^3.8.0",
