--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@jupyterlab/apputils": "^3.0.5",
     "@jupyterlab/cells": "^3.0.7",
     "@jupyterlab/notebook": "^3.0.7",
+    "@terraformer/wkt": "^2.0.7",
     "@types/leaflet": "^1.6.0",
     "@types/leaflet-draw": "^1.0.1",
     "@types/lodash": "^4.14.149",
