--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -44,10 +44,15 @@ repos:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v7.25.0
+    rev: v7.14.0
     hooks:
       - id: eslint
         additional_dependencies:
+          - eslint@7.14.0
+          - typescript@4.2.4
+          - prettier@2.3.0
+          - '@typescript-eslint/eslint-plugin@4.8.1'
+          - '@typescript-eslint/parser@4.8.1'
           - eslint-config-prettier@^6.15.0
           - eslint-plugin-prettier@^3.1.4
 
