--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
           jlpm run eslint:check
           python -m pip install .
 
-          jupyter server extension list 2>&1 | grep -ie "eodag-labextension.*OK"
+          jupyter server extension list 2>&1 | grep -ie "eodag[_-]labextension.*OK"
 
-          jupyter labextension list 2>&1 | grep -ie "eodag-labextension.*OK"
+          jupyter labextension list 2>&1 | grep -ie "eodag[_-]labextension.*OK"
           python -m jupyterlab.browser_check
