--- a/package.json
+++ b/package.json
@@ -51,42 +51,41 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@fortawesome/react-fontawesome": "^0.1.8",
-    "@jupyterlab/application": "^3.0.7",
-    "@jupyterlab/apputils": "^3.0.5",
-    "@jupyterlab/cells": "^3.0.7",
-    "@jupyterlab/notebook": "^3.0.7",
+    "@jupyterlab/application": "^3.1.13",
+    "@jupyterlab/apputils": "^3.1.13",
+    "@jupyterlab/cells": "^3.1.13",
+    "@jupyterlab/notebook": "^3.1.13",
     "@terraformer/wkt": "^2.0.7",
-    "@types/leaflet": "^1.6.0",
-    "@types/leaflet-draw": "^1.0.1",
-    "@types/lodash": "^4.14.149",
-    "@types/luxon": "^1.26.5",
-    "@types/prop-types": "^15.7.3",
-    "@types/react-dom": "~16.9.5",
-    "@types/react-leaflet": "~2.5.0",
-    "@types/react-select": "^4.0.15",
-    "@types/react-virtualized": "~9.21.7",
     "isomorphic-fetch": "^2.2.1",
-    "leaflet": "^1.6.0",
+    "leaflet": "^1.7.1",
     "leaflet-draw": "^1.0.4",
     "lodash": "^4.17.15",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.1",
-    "react-datepicker": "^4.1.1",
-    "react-dom": "^17.0.1",
-    "react-hook-form": "^7.6.4",
-    "react-leaflet": "~2.0.0",
+    "react": "^17.0.2",
+    "react-datepicker": "^4.2.1",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.16.2",
+    "react-leaflet": "~2.8.0",
     "react-leaflet-draw": "0.19.0",
-    "react-modal": "~3.8.1",
-    "react-select": "^4.3.0",
-    "react-tooltip": "~4.2.7",
-    "react-virtualized": "~9.21.0"
+    "react-modal": "^3.14.3",
+    "react-select": "^4.3.1",
+    "react-tooltip": "~4.2.21",
+    "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.0.0",
-    "@types/classnames": "^2.2.11",
-    "@types/isomorphic-fetch": "0.0.35",
-    "@types/react-datepicker": "^3.1.8",
-    "@types/react-modal": "^3.8.1",
+    "@jupyterlab/builder": "^3.1.14",
+    "@types/classnames": "^2.3.1",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/leaflet": "^1.7.5",
+    "@types/leaflet-draw": "^1.0.5",
+    "@types/lodash": "^4.14.175",
+    "@types/luxon": "^1.26.5",
+    "@types/react": "^17.0.26",
+    "@types/react-datepicker": "^4.1.7",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-leaflet": "^2.8.2",
+    "@types/react-modal": "^3.12.1",
+    "@types/react-select": "^4.0.18",
+    "@types/react-virtualized": "^9.21.13",
     "@typescript-eslint/eslint-plugin": "^4.8.1",
     "@typescript-eslint/parser": "^4.8.1",
     "eslint": "^7.14.0",
@@ -99,9 +98,8 @@
     "typescript": "4.2.4"
   },
   "resolutions": {
-    "**/@types/react": "~16.8.4",
-    "**/@types/react-dom": "~16.8.4",
-    "**/@types/prop-types": "^15.5.8"
+    "**/@types/react": "~17.0.26",
+    "**/@types/react-dom": "~17.0.9"
   },
   "jupyterlab": {
     "extension": true,
