fix: py build in ci deploy action

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Build a binary wheel and a source tarball
         run: |
-          python -m pip install setuptools wheel
+          python -m pip install setuptools wheel jupyter-packaging
           python setup.py sdist bdist_wheel
 
       - name: Publish distribution to PyPI
