--- a/package.json
+++ b/package.json
@@ -48,22 +48,22 @@
     "watch:src": "tsc -w"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.26",
-    "@fortawesome/free-solid-svg-icons": "^5.12.0",
-    "@fortawesome/react-fontawesome": "^0.1.8",
-    "@jupyterlab/application": "^3.1.13",
-    "@jupyterlab/apputils": "^3.1.13",
-    "@jupyterlab/cells": "^3.1.13",
-    "@jupyterlab/notebook": "^3.1.13",
-    "@terraformer/wkt": "^2.0.7",
+    "@fortawesome/fontawesome-svg-core": "^6.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@jupyterlab/application": "3.4.7",
+    "@jupyterlab/apputils": "3.4.7",
+    "@jupyterlab/cells": "3.4.7",
+    "@jupyterlab/notebook": "3.4.7",
+    "@terraformer/wkt": "^2.1.2",
     "isomorphic-fetch": "^3.0.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "1.8.0",
     "leaflet-draw": "^1.0.4",
-    "lodash": "^4.17.15",
+    "lodash": "4.17.21",
     "react": "^17.0.2",
-    "react-datepicker": "^4.2.1",
+    "react-datepicker": "4.8.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.16.2",
+    "react-hook-form": "7.36.0",
     "react-leaflet": "~2.8.0",
     "react-leaflet-draw": "0.19.0",
     "react-modal": "^3.14.3",
