--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "watch:src": "tsc -w"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.0",
-    "@fortawesome/free-solid-svg-icons": "^6.0.0",
+    "@fortawesome/fontawesome-svg-core": "6.2.0",
+    "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@jupyterlab/application": "3.4.7",
     "@jupyterlab/apputils": "3.4.7",
@@ -66,25 +66,25 @@
     "react-hook-form": "7.36.0",
     "react-leaflet": "~2.8.0",
     "react-leaflet-draw": "0.19.0",
-    "react-modal": "^3.14.3",
-    "react-select": "^4.3.1",
+    "react-modal": "3.15.1",
+    "react-select": "4.3.1",
     "react-tooltip": "~4.2.21",
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.1.14",
+    "@jupyterlab/builder": "3.4.7",
     "@types/classnames": "^2.3.1",
     "@types/isomorphic-fetch": "^0.0.35",
-    "@types/leaflet": "^1.7.5",
+    "@types/leaflet": "1.8.0",
     "@types/leaflet-draw": "^1.0.5",
     "@types/lodash": "^4.14.175",
     "@types/luxon": "^1.26.5",
     "@types/react": "^17.0.26",
-    "@types/react-datepicker": "^4.1.7",
+    "@types/react-datepicker": "4.4.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-leaflet": "^2.8.2",
-    "@types/react-modal": "^3.12.1",
-    "@types/react-select": "^4.0.18",
+    "@types/react-modal": "3.13.1",
+    "@types/react-select": "4.0.18",
     "@types/react-virtualized": "^9.21.13",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
