--- a/package.json
+++ b/package.json
@@ -60,14 +60,14 @@
     "leaflet": "1.8.0",
     "leaflet-draw": "^1.0.4",
     "lodash": "4.17.21",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-datepicker": "4.8.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-hook-form": "7.36.0",
-    "react-leaflet": "~2.8.0",
+    "react-leaflet": "2.8.0",
     "react-leaflet-draw": "0.19.0",
     "react-modal": "3.15.1",
-    "react-select": "4.3.1",
+    "react-select": "5.4.0",
     "react-tooltip": "~4.2.21",
     "react-virtualized": "^9.22.3"
   },
@@ -78,14 +78,14 @@
     "@types/leaflet": "1.8.0",
     "@types/leaflet-draw": "^1.0.5",
     "@types/lodash": "^4.14.175",
-    "@types/luxon": "^1.26.5",
-    "@types/react": "^17.0.26",
+    "@types/luxon": "^1.27.1",
+    "@types/react": "^17.0.50",
     "@types/react-datepicker": "4.4.2",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "^17.0.17",
     "@types/react-leaflet": "^2.8.2",
     "@types/react-modal": "3.13.1",
     "@types/react-select": "4.0.18",
-    "@types/react-virtualized": "^9.21.13",
+    "@types/react-virtualized": "^9.21.21",
     "@typescript-eslint/eslint-plugin": "^4.32.0",
     "@typescript-eslint/parser": "^4.32.0",
     "eslint": "^7.32.0",
@@ -98,8 +98,8 @@
     "typescript": "4.2.4"
   },
   "resolutions": {
-    "**/@types/react": "~17.0.26",
-    "**/@types/react-dom": "~17.0.9"
+    "**/@types/react": "~17.0.50",
+    "**/@types/react-dom": "~17.0.17"
   },
   "jupyterlab": {
     "extension": true,
