--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,13 +30,13 @@ repos:
     rev: 6.0.0
     hooks:
       - id: pydocstyle
-        language_version: python3.6
+        language_version: python3.7
 
   - repo: https://github.com/psf/black
-    rev: 21.4b0
+    rev: 22.8.0
     hooks:
       - id: black
-        language_version: python3.6
+        language_version: python3.7
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.9.1
