--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,7 +1,7 @@
 fail_fast: false
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks.git
-    rev: v4.3.0
+    rev: v3.4.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
@@ -15,7 +15,7 @@ repos:
       - id: check-merge-conflict
 
   - repo: https://github.com/pycqa/isort
-    rev: 5.10.1
+    rev: 5.8.0
     hooks:
       - id: isort
         name: isort (python)
@@ -27,37 +27,40 @@ repos:
         types: [pyi]
 
   - repo: https://github.com/pycqa/pydocstyle
-    rev: 6.1.1
+    rev: 6.0.0
     hooks:
       - id: pydocstyle
+
   - repo: https://github.com/psf/black
-    rev: 22.8.0
+    rev: 21.4b0
     hooks:
       - id: black
+        language_version: python3.6
+
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 5.0.4
+    rev: 3.9.1
     hooks:
       - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-eslint
-    rev: v8.24.0
+    rev: v7.14.0
     hooks:
       - id: eslint
         additional_dependencies:
-          - eslint@8.23.1
-          - typescript@4.3.5
-          - prettier@2.7.1
-          - '@typescript-eslint/eslint-plugin@5.38.0'
-          - '@typescript-eslint/parser@5.38.0'
-          - eslint-config-prettier@^8.5.0
-          - eslint-plugin-prettier@^4.2.1
+          - eslint@7.32.0
+          - typescript@4.2.4
+          - prettier@2.4.1
+          - '@typescript-eslint/eslint-plugin@4.32.0'
+          - '@typescript-eslint/parser@4.32.0'
+          - eslint-config-prettier@^8.3.0
+          - eslint-plugin-prettier@^4.0.0
 
   - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.0
+    rev: v2.4.1
     hooks:
       - id: prettier
 
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.32.2
+    rev: v0.29.0
     hooks:
       - id: markdownlint
