--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "3.4.7",
+    "@jupyterlab/builder": "^3.4.8",
     "@types/classnames": "^2.3.1",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/leaflet": "1.8.0",
