--- a/package.json
+++ b/package.json
@@ -51,10 +51,10 @@
     "@fortawesome/fontawesome-svg-core": "6.2.0",
     "@fortawesome/free-solid-svg-icons": "6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@jupyterlab/application": "3.4.7",
-    "@jupyterlab/apputils": "3.4.7",
-    "@jupyterlab/cells": "3.4.7",
-    "@jupyterlab/notebook": "3.4.7",
+    "@jupyterlab/application": "3.4.8",
+    "@jupyterlab/apputils": "3.4.8",
+    "@jupyterlab/cells": "3.4.8",
+    "@jupyterlab/notebook": "3.4.8",
     "@terraformer/wkt": "^2.1.2",
     "isomorphic-fetch": "^3.0.0",
     "leaflet": "1.8.0",
@@ -72,7 +72,7 @@
     "react-virtualized": "^9.22.3"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "3.4.7",
+    "@jupyterlab/builder": "^3.4.8",
     "@types/classnames": "^2.3.1",
     "@types/isomorphic-fetch": "^0.0.36",
     "@types/leaflet": "1.8.0",
