--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "react": "^17.0.2",
     "react-datepicker": "4.8.0",
     "react-dom": "^17.0.2",
-    "react-hook-form": "7.36.1",
-    "react-leaflet": "2.8.0",
+    "react-hook-form": "^7.36.1",
+    "react-leaflet": "~2.8.0",
     "react-leaflet-draw": "0.19.0",
     "react-modal": "3.15.1",
     "react-select": "5.4.0",
