fix: post-rebase fix

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -32,11 +32,14 @@ repos:
       - id: pydocstyle
 
   - repo: https://github.com/psf/black
+    rev: 22.8.0
+    hooks:
       - id: black
 
   - repo: https://gitlab.com/pycqa/flake8
     rev: 5.0.4
     hooks:
+      - id: flake8
 
   - repo: https://github.com/pre-commit/mirrors-eslint
     rev: v8.24.0
