--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-hook-form": "^7.39.3",
     "react-leaflet": "~2.8.0",
     "react-leaflet-draw": "0.19.0",
+    "react-loader-spinner": "^5.3.4",
     "react-modal": "3.15.1",
     "react-select": "5.4.0",
     "react-tooltip": "~4.2.21",
