--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@jupyterlab/cells": "^3.4.8",
     "@jupyterlab/notebook": "^3.4.8",
     "@terraformer/wkt": "^2.1.2",
+    "install": "^0.13.0",
     "isomorphic-fetch": "^3.0.0",
     "leaflet": "1.8.0",
     "leaflet-draw": "^1.0.4",
