--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
     "strict": true,
     "strictNullChecks": false,
     "target": "es2017",
-    "types": []
+    "types": [],
+    "skipLibCheck": true
   },
-  "include": ["src/*", "style/*"]
+  "include": ["src/**/*", "style/*"]
 }
