build: bump version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eodag-labextension",
-  "version": "3.6.0",
+  "version": "3.7.0b1",
   "description": "Searching remote sensed imagery from various image providers",
   "keywords": [
     "jupyter",
