--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,8 @@
-enableImmutableInstalls: false
+compressionLevel: mixed
 
-nodeLinker: node-modules
+enableGlobalCache: false
 
 yarnPath: .yarn/releases/yarn-3.8.7.cjs
+
+enableImmutableInstalls: false
+nodeLinker: node-modules
