--- a/package.json
+++ b/package.json
@@ -48,15 +48,23 @@
         "watch:src": "tsc -w"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/sheet": "^1.4.0",
         "@fortawesome/fontawesome-svg-core": "6.2.0",
         "@fortawesome/free-solid-svg-icons": "6.2.0",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@jupyterlab/application": "^4.3.0",
         "@jupyterlab/apputils": "^4.4.0",
         "@jupyterlab/cells": "^4.3.0",
+        "@jupyterlab/coreutils": "^6.3.4",
         "@jupyterlab/notebook": "^4.3.0",
+        "@jupyterlab/services": "^7.3.4",
         "@jupyterlab/settingregistry": "^4.3.0",
+        "@jupyterlab/ui-components": "^4.3.4",
+        "@lumino/signaling": "^2.1.3",
+        "@lumino/widgets": "^2.5.0",
         "@terraformer/wkt": "^2.1.2",
+        "classnames": "^2.5.1",
         "install": "^0.13.0",
         "isomorphic-fetch": "^3.0.0",
         "leaflet": "1.8.0",
@@ -75,8 +83,9 @@
         "react-virtualized": "^9.22.4"
     },
     "devDependencies": {
-        "@jupyterlab/builder": "^4.0.0",
-        "@types/classnames": "^2.3.1",
+        "@jupyterlab/builder": "^4.3.4",
+        "@types/classnames": "^2.3.4",
+        "@types/geojson": "^7946.0.15",
         "@types/isomorphic-fetch": "^0.0.36",
         "@types/json-schema": "^7.0.11",
         "@types/leaflet": "^1.7.11",
@@ -93,6 +102,7 @@
         "@types/react-virtualized": "^9.21.21",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
+        "corepack": "^0.30.0",
         "css-loader": "^6.7.1",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
@@ -208,5 +218,9 @@
             "value-no-vendor-prefix": null
         }
     },
-    "packageManager": "yarn@4.5.3"
+    "resolutions": {
+        "@types/react-dom": "18.3.5",
+        "@types/react": "^18.0.26"
+    },
+    "packageManager": "yarn@3.8.7"
 }
