--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,16 +21,17 @@ jobs:
         with:
           python-version: '3.9'
       - name: Run pre-commit action
-        uses: pre-commit/action@v2.0.0
+        uses: pre-commit/action@v3.0.1
   build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Install node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
+          cache: 'yarn'
       - name: Install Python
         uses: actions/setup-python@v2
         with:
@@ -57,9 +58,8 @@ jobs:
           key: yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             yarn-
-
       - name: Install dependencies
-        run: python -m pip install -U jupyterlab~=3.0 jupyter_packaging~=0.7.9
+        run: python -m pip install -U jupyterlab~=4.0 jupyter_packaging~=0.7.9
       - name: Build the extension
         run: |
           jlpm
