--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 *.bundle.*
 lib/
 node_modules/
+*.log
+.eslintcache
+.stylelintcache
 *.egg-info/
 .ipynb_checkpoints
 *.tsbuildinfo
 eodag_labextension/labextension
+# Version file is handled by hatchling
+eodag_labextension/_version.py
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
@@ -57,6 +62,7 @@ htmlcov/
 .coverage.*
 .cache
 nosetests.xml
+coverage/
 coverage.xml
 *.cover
 .hypothesis/
@@ -115,6 +121,11 @@ dmypy.json
 # OSX files
 .DS_Store
 
+# Yarn cache
+.yarn/
+
 # IDE
-.idea
+.idea/
 .vscode
+
+.venv/
