--- a/package.json
+++ b/package.json
@@ -1,109 +1,225 @@
 {
-  "name": "eodag-labextension",
-  "version": "4.0.0",
-  "description": "Searching remote sensed imagery from various image providers",
-  "keywords": [
-    "jupyter",
-    "jupyterlab",
-    "jupyterlab-extension"
-  ],
-  "homepage": "https://github.com/CS-SI/eodag-labextension",
-  "bugs": {
-    "url": "https://github.com/CS-SI/eodag-labextension/issues"
-  },
-  "license": "Apache-2.0",
-  "author": {
-    "name": "CS Group",
-    "email": "admin@geostorm.eu"
-  },
-  "files": [
-    "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
-    "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
-    "schema/*.json",
-    "node_modules/leaflet/dist/**/*.{css,png}",
-    "style/index.js"
-  ],
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/CS-SI/eodag-labextension.git"
-  },
-  "scripts": {
-    "build": "jlpm run build:lib && jlpm run build:labextension:dev",
-    "build:labextension": "jupyter labextension build .",
-    "build:labextension:dev": "jupyter labextension build --development True .",
-    "build:lib": "tsc",
-    "build:prod": "jlpm run build:lib && jlpm run build:labextension",
-    "clean": "jlpm run clean:lib",
-    "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
-    "clean:labextension": "rimraf eodag_labextension/labextension",
-    "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
-    "eslint": "eslint . --ext .ts,.tsx --fix",
-    "eslint:check": "eslint . --ext .ts,.tsx",
-    "install:extension": "jupyter labextension develop --overwrite .",
-    "prepare": "jlpm run clean && jlpm run build:prod",
-    "watch": "run-p watch:src watch:labextension",
-    "watch:labextension": "jupyter labextension watch .",
-    "watch:src": "tsc -w"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.2.0",
-    "@fortawesome/free-solid-svg-icons": "6.2.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@jupyterlab/application": "^3.4.8",
-    "@jupyterlab/apputils": "^3.4.8",
-    "@jupyterlab/cells": "^3.4.8",
-    "@jupyterlab/notebook": "^3.4.8",
-    "@jupyterlab/settingregistry": "^3.4.8",
-    "@terraformer/wkt": "^2.1.2",
-    "install": "^0.13.0",
-    "isomorphic-fetch": "^3.0.0",
-    "leaflet": "1.8.0",
-    "leaflet-draw": "^1.0.4",
-    "lodash": "4.17.21",
-    "react": "^17.0.2",
-    "react-datepicker": "4.8.0",
-    "react-dom": "^17.0.2",
-    "react-hook-form": "^7.39.3",
-    "react-leaflet": "~2.8.0",
-    "react-leaflet-draw": "0.19.0",
-    "react-loader-spinner": "^6.1.6",
-    "react-modal": "3.15.1",
-    "react-select": "5.4.0",
-    "react-tooltip": "~5.26.3",
-    "react-virtualized": "^9.22.3"
-  },
-  "devDependencies": {
-    "@jupyterlab/builder": "^3.5.2",
-    "@types/classnames": "^2.3.1",
-    "@types/isomorphic-fetch": "^0.0.36",
-    "@types/leaflet": "1.9.14",
-    "@types/leaflet-draw": "^1.0.5",
-    "@types/lodash": "^4.17.13",
-    "@types/luxon": "^3.0.1",
-    "@types/react": "^17.0.50",
-    "@types/react-datepicker": "4.4.2",
-    "@types/react-dom": "^17.0.17",
-    "@types/react-leaflet": "^2.8.2",
-    "@types/react-modal": "3.13.1",
-    "@types/react-select": "4.0.18",
-    "@types/react-virtualized": "^9.21.21",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "eslint": "^8.23.1",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "mkdirp": "^1.0.4",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
-    "typescript": "^5.7.2"
-  },
-  "jupyterlab": {
-    "extension": true,
-    "schemaDir": "schema",
-    "outputDir": "eodag_labextension/labextension"
-  },
-  "styleModule": "style/index.js"
+    "name": "eodag-labextension",
+    "version": "4.0.0",
+    "description": "Searching remote sensed imagery from various image providers",
+    "keywords": [
+        "jupyter",
+        "jupyterlab",
+        "jupyterlab-extension"
+    ],
+    "homepage": "https://github.com/CS-SI/eodag-labextension",
+    "bugs": {
+        "url": "https://github.com/CS-SI/eodag-labextension/issues"
+    },
+    "license": "Apache-2.0",
+    "author": {
+        "name": "CS Group",
+        "email": "admin@geostorm.eu"
+    },
+    "files": [
+        "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
+        "style/**/*.{css,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
+        "schema/*.json",
+        "node_modules/leaflet/dist/**/*.{css,png}",
+        "style/index.js"
+    ],
+    "main": "lib/index.js",
+    "types": "lib/index.d.ts",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/CS-SI/eodag-labextension.git"
+    },
+    "scripts": {
+        "build": "jlpm run build:lib && jlpm run build:labextension:dev",
+        "build:labextension": "jupyter labextension build .",
+        "build:labextension:dev": "jupyter labextension build --development True .",
+        "build:lib": "tsc",
+        "build:prod": "jlpm run build:lib && jlpm run build:labextension",
+        "clean": "jlpm run clean:lib",
+        "clean:all": "jlpm run clean:lib && jlpm run clean:labextension",
+        "clean:labextension": "rimraf eodag_labextension/labextension",
+        "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
+        "eslint": "eslint . --ext .ts,.tsx --fix",
+        "eslint:check": "eslint . --ext .ts,.tsx",
+        "install:extension": "jupyter labextension develop --overwrite .",
+        "prepare": "jlpm run clean && jlpm run build:prod",
+        "watch": "run-p watch:src watch:labextension",
+        "watch:labextension": "jupyter labextension watch .",
+        "watch:src": "tsc -w"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/sheet": "^1.4.0",
+        "@fortawesome/fontawesome-svg-core": "6.2.0",
+        "@fortawesome/free-solid-svg-icons": "6.2.0",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@jupyterlab/application": "^4.3.0",
+        "@jupyterlab/apputils": "^4.4.0",
+        "@jupyterlab/cells": "^4.3.0",
+        "@jupyterlab/coreutils": "^6.3.4",
+        "@jupyterlab/notebook": "^4.3.0",
+        "@jupyterlab/services": "^7.3.4",
+        "@jupyterlab/settingregistry": "^4.3.0",
+        "@jupyterlab/ui-components": "^4.3.4",
+        "@lumino/signaling": "^2.1.3",
+        "@lumino/widgets": "^2.5.0",
+        "@terraformer/wkt": "^2.1.2",
+        "classnames": "^2.5.1",
+        "install": "^0.13.0",
+        "isomorphic-fetch": "^3.0.0",
+        "leaflet": "1.9.4",
+        "leaflet-draw": "^1.0.4",
+        "lodash": "4.17.21",
+        "react": "^18.0.2",
+        "react-datepicker": "4.8.0",
+        "react-dom": "^18.0.2",
+        "react-hook-form": "^7.39.3",
+        "react-leaflet": "4.0.0",
+        "react-leaflet-draw": "0.20.0",
+        "react-loader-spinner": "^6.1.6",
+        "react-modal": "3.15.1",
+        "react-select": "5.4.0",
+        "react-tooltip": "~5.26.3",
+        "react-virtualized": "^9.22.4"
+    },
+    "devDependencies": {
+        "@jupyterlab/builder": "^4.3.4",
+        "@types/classnames": "^2.3.4",
+        "@types/geojson": "^7946.0.15",
+        "@types/isomorphic-fetch": "^0.0.36",
+        "@types/json-schema": "^7.0.11",
+        "@types/leaflet": "^1.7.11",
+        "@types/leaflet-draw": "^1.0.5",
+        "@types/lodash": "^4.14.185",
+        "@types/luxon": "^3.0.1",
+        "@types/react": "^18.0.26",
+        "@types/react-addons-linked-state-mixin": "^0.14.22",
+        "@types/react-datepicker": "4.4.2",
+        "@types/react-dom": "^18.3",
+        "@types/react-leaflet": "^2.8.2",
+        "@types/react-modal": "3.13.1",
+        "@types/react-select": "4.0.18",
+        "@types/react-virtualized": "^9.21.21",
+        "@typescript-eslint/eslint-plugin": "^6.1.0",
+        "@typescript-eslint/parser": "^6.1.0",
+        "corepack": "^0.30.0",
+        "css-loader": "^6.7.1",
+        "eslint": "^8.36.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^5.0.0",
+        "mkdirp": "^1.0.3",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^3.0.0",
+        "rimraf": "^5.0.1",
+        "source-map-loader": "^1.0.2",
+        "style-loader": "^3.3.1",
+        "stylelint": "^15.10.1",
+        "stylelint-config-recommended": "^13.0.0",
+        "stylelint-config-standard": "^34.0.0",
+        "stylelint-csstree-validator": "^3.0.0",
+        "stylelint-prettier": "^4.0.0",
+        "typescript": "~5.0.2",
+        "yjs": "^13.5.40"
+    },
+    "jupyterlab": {
+        "extension": true,
+        "schemaDir": "schema",
+        "outputDir": "eodag_labextension/labextension"
+    },
+    "styleModule": "style/index.js",
+    "eslintConfig": {
+        "extends": [
+            "eslint:recommended",
+            "plugin:@typescript-eslint/eslint-recommended",
+            "plugin:@typescript-eslint/recommended",
+            "plugin:prettier/recommended"
+        ],
+        "parser": "@typescript-eslint/parser",
+        "parserOptions": {
+            "project": "tsconfig.json",
+            "sourceType": "module"
+        },
+        "plugins": [
+            "@typescript-eslint"
+        ],
+        "rules": {
+            "@typescript-eslint/naming-convention": [
+                "error",
+                {
+                    "selector": "interface",
+                    "format": [
+                        "PascalCase"
+                    ],
+                    "custom": {
+                        "regex": "^I[A-Z]",
+                        "match": true
+                    }
+                }
+            ],
+            "@typescript-eslint/no-unused-vars": [
+                "warn",
+                {
+                    "args": "none"
+                }
+            ],
+            "@typescript-eslint/no-explicit-any": "off",
+            "@typescript-eslint/no-namespace": "off",
+            "@typescript-eslint/no-use-before-define": "off",
+            "@typescript-eslint/quotes": [
+                "error",
+                "single",
+                {
+                    "avoidEscape": true,
+                    "allowTemplateLiterals": false
+                }
+            ],
+            "curly": [
+                "error",
+                "all"
+            ],
+            "eqeqeq": "error",
+            "prefer-arrow-callback": "error"
+        }
+    },
+    "eslintIgnore": [
+        "node_modules",
+        "dist",
+        "coverage",
+        "**/*.d.ts"
+    ],
+    "prettier": {
+        "singleQuote": true,
+        "trailingComma": "none",
+        "arrowParens": "avoid",
+        "endOfLine": "auto",
+        "overrides": [
+            {
+                "files": "package.json",
+                "options": {
+                    "tabWidth": 4
+                }
+            }
+        ]
+    },
+    "stylelint": {
+        "extends": [
+            "stylelint-config-recommended",
+            "stylelint-config-standard",
+            "stylelint-prettier/recommended"
+        ],
+        "plugins": [
+            "stylelint-csstree-validator"
+        ],
+        "rules": {
+            "csstree/validator": true,
+            "property-no-vendor-prefix": null,
+            "selector-class-pattern": "^([a-z][A-z\\d]*)(-[A-z\\d]+)*$",
+            "selector-no-vendor-prefix": null,
+            "value-no-vendor-prefix": null
+        }
+    },
+    "resolutions": {
+        "@types/react-dom": "18.3.5",
+        "@types/react": "^18.0.26"
+    }
 }
