--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
         "react-modal": "3.15.1",
         "react-select": "5.4.0",
         "react-tooltip": "~5.26.3",
-        "react-virtualized": "^9.22.4"
+        "react-virtualized": "^9.22.4",
+        "react-window": "^1.8.11"
     },
     "devDependencies": {
         "@jupyterlab/builder": "^4.3.4",
@@ -103,6 +104,7 @@
         "@types/react-modal": "3.13.1",
         "@types/react-select": "4.0.18",
         "@types/react-virtualized": "^9.21.21",
+        "@types/react-window": "^1.8.8",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "corepack": "^0.30.0",
